--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   uuid: ^3.0.6
+  dartz: ^0.10.0-nullsafety.3
 
 
   # The following adds the Cupertino Icons font to your application.
