--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   path_provider: ^2.0.0
   sqflite: ^2.0.0
   sqlite3_flutter_libs: ^0.5.0
-
+  dio: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
